2006-02-17  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (usage): Print "Options:" before actually
	listimg them.
	* launcher/invoker.c (usage): Likewise.

2006-02-13  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.10.

2006-02-13  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (launch_process): Pass RTLD_GLOBAL to dlopen.

2006-02-09  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c: Remove <assert.h> include.
	(assign_child_slot): Do not use assert, issue an error and call
	invoked_send_fake_exit instead, even if this cannot happen! Move send
	fake exit status logic to ...
	(invoked_send_fake_exit): ... here. New function.

2006-02-09  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (clean_childs): Print a newline when informing
	of the child exit code.

2006-02-09  Guillem Jover  <guillem.jover@nokia.com>

	Support child tracking.

	* README: Document the new behaviour.
	* launcher/invoker.1.in: Document the new default in --delay changed
	to wait for the invoked program to exit.
	* launcher/invokelib.h (INVOKER_MSG_EXIT): New macro.
	* launcher/invoker.c (DEFAULT_DELAY): Set to 0.
	(invoker_init): Take a delay argument. New options variable. Set
	options to INVOKER_MSG_MAGIC_OPTION_WAIT of there's no delay.
	Send the options as part of the magic.
	(invoker_recv_exit): New function.
	(get_delay): Move get_linux_lowmem_modifier call to ...
	(main): ... here. New prog_ret variable. Move get_delay call before
	invoker_init, as we are passing the delay variable to it. Move the
	file description closing to just before exit. If delay, sleep for the
	given seconds, else wait for the returned exit code from the launcher.
	Exit with the proxied return code, or otherwise default to 0.
	* launcher/launcher.c: Include <assert.h>.
	(prog_t): Add new member options.
	(child_t): New type.
	(kindergarten_t): Likewise.
	(invoked_get_magic): Take a prog_t argument. Fix all callers. Set