@@ -6,7 +6,7 @@ maemo\-invoker \- invoke a program from the launcher
 .B maemo\-invoker
 .RI [ options "] " file " [" file-options... ]
 .SH DESCRIPTION
-\fBmaemo\-invoker\fP tells maemo-launcher what application to start.
+\fBmaemo\-invoker\fP tells \fBmaemo\-launcher\fP what application to start.
 It will invoke the file provided on the command line with its optional
 arguments, otherwise it will invoke its own program name with the string
 \fI.launch\fP appended and will pass the arguments as well.
@@ -17,10 +17,11 @@ These programs follow the usual GNU command line syntax, with long
 options starting with two dashes (`-').
 A summary of options is included below.
 .TP
-.B \-\-delay SECS
-After invoking the program sleep for SECS seconds before exiting. If SECS is
-0 maemo\-invoker will wait until the program finishes, returning its exit
-status. The default behaviour is to wait for the invoked program to exit.
+.B \-\-delay \fISECS\fP
+After invoking the program sleep for \fISECS\fP seconds before exiting. If
+\fISECS\fP is 0 \fBmaemo\-invoker\fP will wait until the program finishes,
+returning its exit status. The default behaviour is to wait for the invoked
+program to exit.
 .TP
 .B \-\-help
 Show summary of options.
@@ -35,4 +36,4 @@ Set the exit delay. The command line option overrides this.
 .BR maemo\-launcher (1).
 .br
 .SH AUTHOR
-maemo\-invoker was written by Guillem Jover <guillem.jover@nokia.com>.
+\fBmaemo\-invoker\fP was written by Guillem Jover <guillem.jover@nokia.com>.
